relativ url fix for github pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         buttonGo.disabled = false;
     }
     function newLocation() {
-        window.location.href= '/'+locationSelect.value+'/'+missionSelect.value;
+        window.location.href= '/Darktide-Collectible/'+locationSelect.value+'/'+missionSelect.value;
     }
 </script>
 </body>
