--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Darktide Collectible</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
@@ -15,14 +16,17 @@
         align-items: center;
         height: 100vh;
     }
+
     Label {
         color: white;
     }
-    .select{
+
+    .select {
         padding: 10px 0;
     }
+
     #select-container {
-        width:50%;
+        width: 50%;
 
     }
 </style>
@@ -41,28 +45,49 @@
 
         </select>
     </div>
-    <div class="select">
-        <input class="btn btn-secondary" type="button" value="Show me the Loot!" id="button-go" disabled onclick="newLocation()">
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio1" value="Grimmoires" checked>
+        <label class="form-check-label" for="inlineRadio1">Grimmoires</label>
     </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio2" value="Scripters">
+        <label class="form-check-label" for="inlineRadio2">Scripters</label>
+    </div>
+    <div class="select">
+        <input class="btn btn-secondary" type="button" value="Show me the Loot!" id="button-go" disabled
+               onclick="newLocation()">
+    </div>
+
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 <script>
     const missions = {
-        "HL-16-11":["Chasm Logistratum", "Chasm Station", "Hab Dreyko"],
-        "HL-18-66":["Magistrati Oubliette"]
+        "HL-16-11": ["Chasm Logistratum", "Chasm Station", "Hab Dreyko"],
+        "HL-18-66": ["Magistrati Oubliette"]
     }
     const missionSelect = document.getElementById("select-mission");
     const locationSelect = document.getElementById("select-location");
     const buttonGo = document.getElementById("button-go");
-    locationSelect.onchange = function() {
+    const collectibleButton = document.querySelectorAll('input[name="Collectible"]');
+    locationSelect.onchange = function () {
         missionSelect.length = 0;
         for (let y in missions[this.value]) {
             missionSelect.options[missionSelect.options.length] = new Option(missions[this.value][y], missions[this.value][y]);
         }
         buttonGo.disabled = false;
     }
+
     function newLocation() {
-        window.location.href= '/Darktide-Collectible/'+locationSelect.value+'/'+missionSelect.value;
+        let location;
+        for (const button of collectibleButton) {
+            if (button.checked) {
+                location = button.value;
+                break;
+            }
+        }
+        window.location.href = '/Darktide-Collectible/' + locationSelect.value + '/' + missionSelect.value + '/' + location;
     }
 </script>
 </body>
