--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <select class="form-select" aria-label="Default select example" id="select-location">
             <option selected disabled>Choose a Location</option>
             <option value="HL-16-11">HL-16-11</option>
+            <option value="HL-17-36">HL-17-36</option>
             <option value="HL-18-66">HL-18-66</option>
         </select>
     </div>
@@ -65,7 +66,8 @@
 <script>
     const missions = {
         "HL-16-11": ["Chasm Logistratum", "Chasm Station", "Hab Dreyko"],
-        "HL-18-66": ["Magistrati Oubliette"]
+        "HL-18-66": ["Magistrati Oubliette", "Silo Cluster"],
+        "HL-17-36": ["Smelter Complex"]
     }
     const missionSelect = document.getElementById("select-mission");
     const locationSelect = document.getElementById("select-location");
