fixed misspelling of Grimoires

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </select>
     </div>
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio1" value="Grimmoires" checked>
-        <label class="form-check-label" for="inlineRadio1">Grimmoires</label>
+        <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio1" value="Grimoires" checked>
+        <label class="form-check-label" for="inlineRadio1">Grimoires</label>
     </div>
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio2" value="Scripters">
