added Readme and added locations

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     const missions = {
         "HL-16-11": ["Chasm Logistratum", "Chasm Station", "Hab Dreyko"],
         "HL-18-66": ["Magistrati Oubliette", "Silo Cluster"],
-        "HL-17-36": ["Smelter Complex", "Power Matrix"]
+        "HL-17-36": ["Smelter Complex", "Power Matrix", "Consignment Yard"]
     }
     const missionSelect = document.getElementById("select-mission");
     const locationSelect = document.getElementById("select-location");
