--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio2" value="Scripters">
-        <label class="form-check-label" for="inlineRadio2">Scripters</label>
+        <label class="form-check-label" for="inlineRadio2">Scriptures</label>
     </div>
     <div class="select">
         <input class="btn btn-secondary" type="button" value="Show me the Loot!" id="button-go" disabled
