--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <option value="HL-16-11">HL-16-11</option>
             <option value="HL-17-36">HL-17-36</option>
             <option value="HL-18-66">HL-18-66</option>
+            <option value="HL-32-2">HL-32-2</option>
         </select>
     </div>
     <div class="select">
@@ -67,7 +68,8 @@
     const missions = {
         "HL-16-11": ["Chasm Logistratum", "Chasm Station", "Hab Dreyko"],
         "HL-18-66": ["Magistrati Oubliette", "Silo Cluster"],
-        "HL-17-36": ["Smelter Complex", "Power Matrix", "Consignment Yard"]
+        "HL-17-36": ["Smelter Complex", "Power Matrix", "Consignment Yard"],
+        "HL-32-2": ["Relay Station"]
     }
     const missionSelect = document.getElementById("select-mission");
     const locationSelect = document.getElementById("select-location");
