--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <label class="form-check-label" for="inlineRadio1">Grimoires</label>
     </div>
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio2" value="Scripters">
+        <input class="form-check-input" type="radio" name="Collectible" id="inlineRadio2" value="Scriptures">
         <label class="form-check-label" for="inlineRadio2">Scriptures</label>
     </div>
     <div class="select">
