fixed wrong spelling of missions

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         "HL-16-11": ["Chasm Logistratum", "Chasm Station", "Hab Dreyko"],
         "HL-17-36": ["Smelter Complex", "Power Matrix", "Consignment Yard"],
         "HL-18-66": ["Magistrati Oubliette", "Silo Cluster", "Vigil Station"],
-        "HL-19-24": ["Encalvum Baross"],
+        "HL-19-24": ["Enclavum Baross"],
         "HL-32-2": ["Relay Station", "Exice Vault", "Freight Port", "Refinery Delta"]
     }
     const missionSelect = document.getElementById("select-mission");
